Adding more vars

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <section id="questions" class="hidden">
         <div>
-            <H3 id="questionTitle">Question one: What is HTML?</H3>
+            <h3 id="questionTitle">Question one: What is HTML?</h3>
         </div>
         <div id="choices" class="choices"></div>
         <!-- <div>
