--- a/index.html
+++ b/index.html
@@ -21,21 +21,9 @@
     
     <section id="questions" class="hidden">
         <div>
-            <h3 id="questionTitle">Question one: What is HTML?</h3>
+            <h3 id="questionTitle"></h3>
         </div>
         <div id="choices" class="choices"></div>
-        <!-- <div>
-            <H3>Question two: What are HTML tags?</H3>
-        </div>
-        <div>
-            <H3>Question three: How do you separate a section of texts in HTML?</H3>
-        </div>
-        <div>
-            <H3>Question four: How do you align list elements in an HTML file?</H3>
-        </div>
-        <div>
-            <H3>Question five: Differentiate between an Ordered list and an Unordered list?</H3>
-        </div> -->
     </section>
 
     <section id="endscreen" class="hidden">
