changing questions and stuff for finalising

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     
     <div class="wrapper"><section id="startscreen">
         <h1>Code Quiz</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere reprehenderit assumenda ducimus porro nobis dolor officia libero eius amet at, tenetur unde aperiam consectetur nisi modi labore provident error cupiditate!</p>
+        <p>HTML (Hypertext Markup Language) is a text-based approach to describing how content
+            contained within an HTML file is structured. This markup tells a web browser how to
+            display text, images and other forms of multimedia on a webpage.</p>
         <button id="startbtn">Start Quiz</button>
 
 
